@@ -36,6 +36,7 @@ import java.io.File;
 import java.io.IOException;
 import java.lang.ref.WeakReference;
 import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
@@ -68,7 +69,7 @@ public class OldDataMonitorTest {
         OldDataMonitor odm = OldDataMonitor.get(r.jenkins);
         FreeStyleProject p = r.jenkins.getItemByFullName("busted", FreeStyleProject.class);
         assertNotNull(p);
-        assertEquals(Collections.singleton(p), odm.getData().keySet());
+        assertEquals(Set.of(p), odm.getData().keySet());
         odm.doDiscard(null, null);
         assertEquals(Collections.emptySet(), odm.getData().keySet());
         // did not manage to save p, but at least we are not holding onto a reference to it anymore
@@ -83,7 +84,7 @@ public class OldDataMonitorTest {
         r.jenkins.getQueue().clearLeftItems();
         p._getRuns().purgeCache();
         b = p.getBuildByNumber(1);
-        assertEquals(Collections.singleton(b), OldDataMonitor.get(r.jenkins).getData().keySet());
+        assertEquals(Set.of(b), OldDataMonitor.get(r.jenkins).getData().keySet());
         WeakReference<?> ref = new WeakReference<>(b);
         b = null;
         MemoryAssert.assertGC(ref, true);
@@ -145,7 +146,7 @@ public class OldDataMonitorTest {
         p.delete();
         OldDataMonitor.report(build, (String) null);
 
-        assertEquals(Collections.singleton(build), odm.getData().keySet());
+        assertEquals(Set.of(build), odm.getData().keySet());
         odm.doDiscard(null, null);
         assertEquals(Collections.emptySet(), odm.getData().keySet());
 
